增加自定义最大选择照片数量
增加自定义最大选择照片数量

--- a/ImagePicker/DNImagePicker/DNImagePickerController.strings
+++ b/ImagePicker/DNImagePicker/DNImagePickerController.strings
@@ -1,5 +1,5 @@
 "albumTitle" = "Photos";
 "cancel" = "Cancel";
-"send" = "send";
-"preview" = "preview";
+"send" = "Confirm";
+"preview" = "Preview";
 "fullImage" = "Full Image";
