--- a/ImagePicker/DNImagePicker/en.lproj/DNImagePicker.strings
+++ b/ImagePicker/DNImagePicker/en.lproj/DNImagePicker.strings
@@ -7,8 +7,8 @@
 */
 "albumTitle" = "Photos";
 "cancel" = "Cancel";
-"send" = "send";
-"preview" = "preview";
+"send" = "Confirm";
+"preview" = "Preview";
 "fullImage" = "Full Image";
 "alertTitle" = "Tips";
 "alertContent" = "Can not select more than 9 photos";
