--- a/ImagePicker/DNImagePicker/zh-Hans.lproj/DNImagePicker.strings
+++ b/ImagePicker/DNImagePicker/zh-Hans.lproj/DNImagePicker.strings
@@ -7,10 +7,10 @@
 */
 "albumTitle" = "照片";
 "cancel" = "取消";
-"send" = "发送";
+"send" = "完成";
 "preview" = "预览";
 "fullImage" = "原图";
 "alertTitle" = "提示";
-"alertContent" = "不能超过9张图片";
+"alertContent" = "最多选择9张图片";
 "alertButton" = "确定";
 "UnAuthorizedTip" = "请在iPhone的\"设置-隐私-照片\"选项中，\n允许%@访问你的手机相册";
